--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@
 *.exe
 *.out
 *.app
+
+build-src*
+build/
+cmake-build*
+*.user
+*.lnk
+Libs/*
+_workingDir*
+.vscode
+.idea
+.cache
+cache
+.vs
+out/
+CMakeSettings.json
+/vcpkg
