Finish simple lex

--- a/tools/3rdparty/moc/CMakeLists.txt
+++ b/tools/3rdparty/moc/CMakeLists.txt
@@ -26,7 +26,7 @@ include_directories(
 # ----------------------------------
 # moc.pri
 # ----------------------------------
-set(MOC_LIB_TARGET ${PROJECT_NAME})
+set(MOC_LIB_TARGET mocparser)
 
 if(NOT DEFINED MOC_LIB_BUILD_SHARED OR NOT MOC_LIB_BUILD_SHARED)
     add_library(${MOC_LIB_TARGET} STATIC)
@@ -35,19 +35,15 @@ else()
 endif()
 
 target_sources(${MOC_LIB_TARGET} PRIVATE
-    moc.h
     preprocessor.h
     parser.h
     symbols.h
     token.h
     utils.h
-    generator.h
     outputrevision.h
     cbordevice.h
     collectjson.h
-    moc.cpp
     preprocessor.cpp
-    generator.cpp
     parser.cpp
     token.cpp
     collectjson.cpp
@@ -55,12 +51,14 @@ target_sources(${MOC_LIB_TARGET} PRIVATE
 
 target_link_libraries(${MOC_LIB_TARGET} PUBLIC Qt${QT_VERSION_MAJOR}::Core)
 
+target_include_directories(${MOC_LIB_TARGET} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
+
 # ----------------------------------
 # moc.pro
 # ----------------------------------
-set(MOC_EXE_TARGET ${PROJECT_NAME}_tool)
+set(MOC_EXE_TARGET ${PROJECT_NAME})
 
-add_executable(${MOC_EXE_TARGET} main.cpp)
+add_executable(${MOC_EXE_TARGET} moc.h moc.cpp generator.h generator.cpp main.cpp)
 
 target_link_libraries(${MOC_EXE_TARGET} PRIVATE ${MOC_LIB_TARGET})
 
