--- a/examples/test1/CMakeLists.txt
+++ b/examples/test1/CMakeLists.txt
@@ -9,7 +9,7 @@ add_qt_private_inc(_qt_private_incs Core)
 # ----------------------------------
 # Add target
 # ----------------------------------
-add_files(_src CURRENT_RECURSE PATTERNS *.c *.cpp)
+add_files(_src CURRENT_RECURSE PATTERNS *.h *.c *.cpp)
 add_executable(${PROJECT_NAME} ${_src})
 
 # ----------------------------------
