--- a/tools/qasc/CMakeLists.txt
+++ b/tools/qasc/CMakeLists.txt
@@ -10,16 +10,16 @@ add_qt_private_inc(_qt_private_incs Core)
 
 # ----------------------------------
 # Add target
-# ----------------------------------
-add_files(_src CURRENT_RECURSE PATTERNS *.c *.cpp)
+# ----------------------------------)
+include_directories(../../include)
+add_files(_src CURRENT_RECURSE PATTERNS *.h *.c *.cpp)
 add_executable(${PROJECT_NAME} ${_src})
 
 # ----------------------------------
 # Target...
 # ----------------------------------
 target_compile_definitions(${PROJECT_NAME} PRIVATE APP_VERSION="${PROJECT_VERSION}")
-target_link_libraries(${PROJECT_NAME} PRIVATE ${_qt_libs})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${_qt_libs} mocparser)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${_qt_private_incs})
 
 include(../../QasUtils.cmake)
-qas_auto_gen(${PROJECT_NAME})
