--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.17)
 
 project(examples)
 
+if(WIN32)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
+endif()
+
 # Add modules
 include(../scripts/cmake/All.cmake)
 
