--- a/tools/qasc/CMakeLists.txt
+++ b/tools/qasc/CMakeLists.txt
@@ -36,3 +36,11 @@ if(WIN32)
     )
     target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/res.rc)
 endif()
+
+if(CMAKE_BUILD_TYPE STREQUAL Release)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "$<TARGET_FILE:${PROJECT_NAME}>"
+        "${CMAKE_CURRENT_SOURCE_DIR}/../../scripts"
+    )
+endif()
