--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,5 +15,10 @@ add_library(${PROJECT_NAME} STATIC ${_src})
 # ----------------------------------
 # Target...
 # ----------------------------------
-target_link_libraries(${PROJECT_NAME} PRIVATE ${_qt_libs} mocparser)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${_qt_libs})
+
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ../include ${_qt_private_incs})
+
+target_include_directories(${PROJECT_NAME} PUBLIC
+    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${QAS_INSTALL_NAME_LOWER}>"
+)
