Change qasc to tools dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,9 +56,16 @@ if(NOT QAS_SKIP_INSTALL)
         NO_CHECK_REQUIRED_COMPONENTS_MACRO
     )
 
-    install(TARGETS qasc qasstream
+    install(TARGETS qasstream
         EXPORT QasToolTargets
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    )
+
+    install(TARGETS qasc
+        EXPORT QasToolTargets
+        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/tools/${QAS_INSTALL_NAME_LOWER}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
