--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,24 +1,14 @@
 project(qasstream)
 
 # ----------------------------------
-# Add modules
-# ----------------------------------
-add_qt_module(_qt_libs Core)
-add_qt_private_inc(_qt_private_incs Core)
-
-# ----------------------------------
 # Add target
 # ----------------------------------)
-add_files(_src CURRENT_RECURSE PATTERNS *.h *.c *.cpp DIRECTORIES ../include)
-add_library(${PROJECT_NAME} STATIC ${_src})
+add_library(${PROJECT_NAME} INTERFACE)
 
 # ----------------------------------
 # Target...
 # ----------------------------------
-target_link_libraries(${PROJECT_NAME} PRIVATE ${_qt_libs})
-
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ../include ${_qt_private_incs})
-
-target_include_directories(${PROJECT_NAME} PUBLIC
+target_include_directories(${PROJECT_NAME} INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>"
     "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${QAS_INSTALL_NAME_LOWER}>"
 )
