--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,7 +6,9 @@ if(WIN32)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
 endif()
 
-find_package(qastool REQUIRED COMPONENTS qasstream qasc)
+find_package(qastool REQUIRED)
+
+include_directories(${QASTOOL_INCLUDE_DIRS})
 
 # Add modules
 include(../scripts/cmake/All.cmake)
