Fix a paring member var bug

--- a/examples/test5/CMakeLists.txt
+++ b/examples/test5/CMakeLists.txt
@@ -18,9 +18,9 @@ add_executable(${PROJECT_NAME} ${_src})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${_qt_libs})
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${_qt_private_incs})
 
-# if(TRUE)
-#     set(_headers ${_src})
-#     list(FILTER _headers INCLUDE REGEX ".*\\.(h|hpp)")
-#     qas_wrap_cpp(_qasc_src ${_headers} TARGET ${PROJECT_NAME})
-#     target_sources(${PROJECT_NAME} PRIVATE ${_qasc_src})
-# endif()
+ if(TRUE)
+     set(_headers ${_src})
+     list(FILTER _headers INCLUDE REGEX ".*\\.(h|hpp)")
+     qas_wrap_cpp(_qasc_src ${_headers} TARGET ${PROJECT_NAME})
+     target_sources(${PROJECT_NAME} PRIVATE ${_qasc_src})
+ endif()
