--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 if(WIN32)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
-else()
+elseif(NOT QAS_VCPKG_TOOLS_HINT)
     set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
 endif()
 
